<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".views.auth.AuthHomeActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/inter_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/authSubTitle"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:fontFamily="@font/inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/authAnim"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/marketing" />

    <Button
        android:id="@+id/googleBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="410dp"
        android:text="@string/continueGoogle"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:background="@drawable/btn_grey_light_bg"
        android:drawableLeft="@drawable/google"
        android:drawablePadding="20dp"
        android:paddingHorizontal="40dp"
        app:fontFamily="@font/inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/facebookBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_blue_bg"
        android:drawableLeft="@drawable/facebook"
        android:drawablePadding="10dp"
        android:paddingHorizontal="30dp"
        android:text="@string/continueFacebook"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:fontFamily="@font/inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleBtn" />

    <Button
        android:id="@+id/emailBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_grey_light_bg"
        android:drawableLeft="@drawable/gmail"
        android:drawablePadding="20dp"
        android:paddingHorizontal="40dp"
        android:text="@string/continueNormal"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:fontFamily="@font/inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebookBtn" />

    <TextView
        android:id="@+id/authBottom"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="625dp"
        android:text="@string/authBottom"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textAlignment ="center"
        app:fontFamily="@font/inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>