<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:fitsSystemWindows="true"
    tools:context=".views.auth.LoginActivity">

    <TextView
        android:id="@+id/log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/inter"
        app:layout_constraintBottom_toTopOf="@+id/log_inputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/log_inputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/log_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_email_input"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:hint="@string/input_email"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_email_view"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_password_input"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:hint="@string/input_pwd"
                android:paddingHorizontal="20dp"
                android:textSize="15sp"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/log_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/btn_primary"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:fontFamily="@font/inter_bold"
        app:layout_constraintBottom_toTopOf="@+id/log_forgot_txt"
        app:layout_constraintTop_toBottomOf="@+id/log_inputs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/log_forgot_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="@color/blue"
        app:fontFamily="@font/inter"
        app:layout_constraintBottom_toTopOf="@+id/log_check_txt"
        app:layout_constraintTop_toBottomOf="@+id/log_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/log_check_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_check"
        android:textColor="@color/black"
        app:fontFamily="@font/inter"
        app:layout_constraintBottom_toTopOf="@+id/log_signup_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_forgot_txt" />

    <Button
        android:id="@+id/log_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/btn_white_bg"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="20dp"
        app:fontFamily="@font/inter_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_check_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>