<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:fitsSystemWindows="true"
    tools:context=".views.auth.SignupActivity">

    <TextView
        android:id="@+id/sin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signup_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/inter"
        app:layout_constraintBottom_toTopOf="@+id/sin_inputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sin_inputs"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/sin_signup_btn"
        app:layout_constraintTop_toBottomOf="@+id/sin_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sin_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/sin_name_input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="10dp"
                android:hint="@string/input_name"
                android:paddingHorizontal="20dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sin_email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sin_name_view">

            <EditText
                android:id="@+id/sin_email_input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/mail"
                android:drawablePadding="10dp"
                android:hint="@string/input_email"
                android:paddingHorizontal="20dp"
                android:textColorHint="#757575"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sin_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sin_email_view">

            <EditText
                android:id="@+id/sin_password_input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="10dp"
                android:hint="@string/input_pwd"
                android:paddingHorizontal="20dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sin_confirm_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sin_password_view">

            <EditText
                android:id="@+id/sin_confirm_password_input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="10dp"
                android:hint="@string/input_confirm_password"
                android:paddingHorizontal="20dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/sin_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/btn_primary"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:fontFamily="@font/inter_bold"
        app:layout_constraintBottom_toTopOf="@+id/sin_agree_txt"
        app:layout_constraintTop_toBottomOf="@+id/sin_inputs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sin_agree_txt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12dp"
        android:text="@string/agreement"
        android:textColor="@color/black"
        app:fontFamily="@font/inter"
        app:layout_constraintBottom_toTopOf="@+id/sin_check_txt"
        app:layout_constraintTop_toBottomOf="@+id/sin_signup_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sin_check_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_exist"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:fontFamily="@font/inter"
        app:layout_constraintBottom_toTopOf="@+id/sin_login_btn"
        app:layout_constraintTop_toBottomOf="@+id/sin_agree_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sin_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/btn_white_bg"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:fontFamily="@font/inter_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sin_check_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>