<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.BuyerCardFragment">

    <ImageView
        android:id="@+id/iv_buyerCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/buyer_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buyer_Btn_bCard"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/buyer"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        app:backgroundTint="@color/blue_card"
        app:layout_constraintStart_toStartOf="@id/iv_buyerCard"
        app:layout_constraintTop_toTopOf="@id/iv_buyerCard" />

    <Button
        android:id="@+id/seller_Btn_bCard"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/seller"
        android:textAllCaps="false"
        android:textColor="@color/white"
        style="?android:attr/borderlessButtonStyle"
        app:backgroundTint="@color/blue_card"
        app:layout_constraintEnd_toEndOf="@id/iv_buyerCard"
        app:layout_constraintTop_toTopOf="@id/iv_buyerCard" />

    <TextView
        android:id="@+id/buyer_content"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/lorem"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/inter"
        android:lineSpacingExtra="5sp"
        android:letterSpacing="0.125"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/iv_buyerCard"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/iv_buyerCard"
        app:layout_constraintTop_toTopOf="@id/iv_buyerCard" />


</androidx.constraintlayout.widget.ConstraintLayout>